unpackaged/main/default/objects/Contact/fields/Alternate_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_1__c</fullName>
    <label>Alternate Email 1</label>
    <type>Email</type>
</CustomField>