unpackaged/main/default/objects/Contact/fields/Alternate_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_2__c</fullName>
    <label>Alternate Email 2</label>
    <type>Email</type>
</CustomField>