unpackaged/main/default/objects/Contact/fields/Annual_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Household_Income__c</fullName>
    <label>Annual Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annual_Household_Income</valueSetName>
    </valueSet>
</CustomField>