unpackaged/main/default/objects/Contact/fields/Anticipated_Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Exam_Date__c</fullName>
    <label>Anticipated Exam Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Anticipated_Exam_Date</valueSetName>
    </valueSet>
</CustomField>