unpackaged/main/default/objects/Contact/fields/Apartment_Unit__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Unit__c</fullName>
    <label>Apartment/Unit #</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>