unpackaged/main/default/objects/Contact/fields/Approval_to_Advocate_on_Denial__c.field-meta.xml
<CustomField>
    <fullName>Approval_to_Advocate_on_Denial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is used to inform users of whether a patient has provided TLN with the approval to advocate on their behalf (this value is passed from services to Salesforce).</description>
    <label>Approval to Advocate on Denial</label>
    <type>Checkbox</type>
</CustomField>