unpackaged/main/default/objects/Contact/fields/Associated_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Associated_Hospital__c</fullName>
    <label>Associated Hospital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>