unpackaged/main/default/objects/Contact/fields/Automated_Text_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Automated_Text_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Text Opt Out</label>
    <type>Checkbox</type>
</CustomField>