unpackaged/main/default/objects/Contact/fields/Average_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_NPS_Score__c</fullName>
    <label>Average NPS Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>