unpackaged/main/default/objects/Contact/fields/Background_Field_of_LC_passion__c.field-meta.xml
<CustomField>
    <fullName>Background_Field_of_LC_passion__c</fullName>
    <label>Background/Field of LC passion</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>