unpackaged/main/default/objects/Contact/fields/Business_Growth_Goals__c.field-meta.xml
<CustomField>
    <fullName>Business_Growth_Goals__c</fullName>
    <label>Business Growth Goals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I have all the business I can handle</fullName>
            </value>
            <value>
                <fullName>I would like a little more business</fullName>
            </value>
            <value>
                <fullName>I would like a lot more business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>