unpackaged/main/default/objects/Contact/fields/Business_Profile__c.field-meta.xml
<CustomField>
    <fullName>Business_Profile__c</fullName>
    <label>Business Profile</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I own or work in a full time practice</fullName>
            </value>
            <value>
                <fullName>I own or work in a part time practice</fullName>
            </value>
            <value>
                <fullName>I work in a hospital</fullName>
            </value>
            <value>
                <fullName>I work in another medical provider&#39;s office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>