unpackaged/main/default/objects/Contact/fields/CAQH_Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>CAQH_Contract_Sent__c</fullName>
    <label>CAQH Contract Sent</label>
    <type>Date</type>
</CustomField>