unpackaged/main/default/objects/Contact/fields/CAQH_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>CAQH_Contract_Signed__c</fullName>
    <label>CAQH Contract Signed</label>
    <type>Date</type>
</CustomField>