unpackaged/main/default/objects/Contact/fields/CAQH_Number__c.field-meta.xml
<CustomField>
    <fullName>CAQH_Number__c</fullName>
    <label>CAQH provider ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>