unpackaged/main/default/objects/Contact/fields/Completed_Scientific_Education_Rqmts__c.field-meta.xml
<CustomField>
    <fullName>Completed_Scientific_Education_Rqmts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Scientific Education Rqmts</label>
    <type>Checkbox</type>
</CustomField>