unpackaged/main/default/objects/Contact/fields/Consultant_Availability__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Availability__c</fullName>
    <label>Consultant Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>