unpackaged/main/default/objects/Contact/fields/Contact_Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Contact_Vaccinated__c</fullName>
    <inlineHelpText>Indicates if the consultant has answered whether or not they have been vaccinated.</inlineHelpText>
    <label>Contact Vaccinated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I am fully vaccinated</fullName>
            </value>
            <value>
                <fullName>I am partially vaccinated</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>I decline to disclose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>