unpackaged/main/default/objects/Contact/fields/Credential_Certification_License_Details__c.field-meta.xml
<CustomField>
    <fullName>Credential_Certification_License_Details__c</fullName>
    <label>Credential/Certification/License Details</label>
    <type>TextArea</type>
</CustomField>