unpackaged/main/default/objects/Contact/fields/Credentials_Licensing__c.field-meta.xml
<CustomField>
    <fullName>Credentials_Licensing__c</fullName>
    <label>Credentials &amp; Licensing</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>