unpackaged/main/default/objects/Contact/fields/Current_Lactation_Certification_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Lactation_Certification_Level__c</fullName>
    <label>Current Lactation Certification Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lactation_Certification_Level</valueSetName>
    </valueSet>
</CustomField>