unpackaged/main/default/objects/Contact/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Patient date of birth. As we can not map Lead custom fields into standard fields. We created custom field for contact.</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>