unpackaged/main/default/objects/Contact/fields/Denial_Email_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Denial_Email_Datetime__c</fullName>
    <label>Denial Email Datetime</label>
    <type>DateTime</type>
</CustomField>