unpackaged/main/default/objects/Contact/fields/Denial_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Denial_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denial Email Sent</label>
    <type>Checkbox</type>
</CustomField>