unpackaged/main/default/objects/Contact/fields/Employer_Id__c.field-meta.xml
<CustomField>
    <fullName>Employer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Employer ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>