unpackaged/main/default/objects/Contact/fields/Employer_Type__c.field-meta.xml
<CustomField>
    <fullName>Employer_Type__c</fullName>
    <label>Employer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employer_Type</valueSetName>
    </valueSet>
</CustomField>