unpackaged/main/default/objects/Contact/fields/Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Legal_Name__c</fullName>
    <label>Full Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>