unpackaged/main/default/objects/Contact/fields/Grant_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Application_Date__c</fullName>
    <label>Grant Application Date</label>
    <type>Date</type>
</CustomField>