unpackaged/main/default/objects/Contact/fields/Has_Closed_Script__c.field-meta.xml
<CustomField>
    <fullName>Has_Closed_Script__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Closed Script</label>
    <type>Checkbox</type>
</CustomField>