unpackaged/main/default/objects/Contact/fields/HasOptedOutOfMobile__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Opt Out</label>
    <type>Checkbox</type>
</CustomField>