unpackaged/main/default/objects/Contact/fields/Healthcare_Professional_Designations__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Professional_Designations__c</fullName>
    <label>Healthcare Professional Designations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Healthcare_Professional_Designations</valueSetName>
    </valueSet>
</CustomField>