unpackaged/main/default/objects/Contact/fields/IBCLC_Actual_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>IBCLC_Actual_Certification_Date__c</fullName>
    <label>IBCLC Actual Certification Date</label>
    <type>Date</type>
</CustomField>