unpackaged/main/default/objects/Contact/fields/IBCLC_Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>IBCLC_Certification_Status__c</fullName>
    <label>IBCLC Certification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IBCLC_Certification_Status</valueSetName>
    </valueSet>
</CustomField>