unpackaged/main/default/objects/Contact/fields/IBCLC_L__c.field-meta.xml
<CustomField>
    <fullName>IBCLC_L__c</fullName>
    <label>IBCLC L#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>