unpackaged/main/default/objects/Contact/fields/Lactation_Email__c.field-meta.xml
<CustomField>
    <fullName>Lactation_Email__c</fullName>
    <label>Lactation Email</label>
    <type>Email</type>
</CustomField>