unpackaged/main/default/objects/Contact/fields/LC_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>LC_Training_Status__c</fullName>
    <label>LC Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>