unpackaged/main/default/objects/Contact/fields/LCP_Business_Location__c.field-meta.xml
<CustomField>
    <fullName>LCP_Business_Location__c</fullName>
    <label>LCP Business Location</label>
    <type>Address</type>
</CustomField>