unpackaged/main/default/objects/Contact/fields/LCP_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>LCP_Business_Name__c</fullName>
    <label>LCP Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>