unpackaged/main/default/objects/Contact/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <description>Is used in flow to get reference to original Lead to be able to populate restricted picklist fields.</description>
    <label>Lead Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>