unpackaged/main/default/objects/Contact/fields/Lead_Specific__c.field-meta.xml
<CustomField>
    <fullName>Lead_Specific__c</fullName>
    <label>Lead Specific</label>
    <type>TextArea</type>
</CustomField>