unpackaged/main/default/objects/Contact/fields/Liability_Insurance_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Liability_Insurance_Expiration_Date__c</fullName>
    <label>Liability Insurance Expiration Date</label>
    <type>Date</type>
</CustomField>