unpackaged/main/default/objects/Contact/fields/License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration_Date__c</fullName>
    <label>Certification Expiration</label>
    <type>Date</type>
</CustomField>