unpackaged/main/default/objects/Contact/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>IBCLC Certification Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>