unpackaged/main/default/objects/Contact/fields/Location_in_Nextgen__c.field-meta.xml
<CustomField>
    <fullName>Location_in_Nextgen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location in Nextgen</label>
    <type>Checkbox</type>
</CustomField>