unpackaged/main/default/objects/Contact/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>MRN</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>