unpackaged/main/default/objects/Contact/fields/NF_Exhibit_Sent__c.field-meta.xml
<CustomField>
    <fullName>NF_Exhibit_Sent__c</fullName>
    <label>NF Exhibit Sent</label>
    <type>Date</type>
</CustomField>