unpackaged/main/default/objects/Contact/fields/NF_Exhibit_Signed__c.field-meta.xml
<CustomField>
    <fullName>NF_Exhibit_Signed__c</fullName>
    <label>NF Exhibit Signed</label>
    <type>Date</type>
</CustomField>