unpackaged/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Specific notes for account and doctor.</description>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>