unpackaged/main/default/objects/Contact/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Contract Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>