unpackaged/main/default/objects/Contact/fields/Original_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Signed__c</fullName>
    <label>Original Contract Signed</label>
    <type>DateTime</type>
</CustomField>