unpackaged/main/default/objects/Contact/fields/Other_Employer_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Employer_Type__c</fullName>
    <label>Other Employer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>