unpackaged/main/default/objects/Contact/fields/Other_Funding_Category__c.field-meta.xml
<CustomField>
    <fullName>Other_Funding_Category__c</fullName>
    <label>Other Funding Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>