unpackaged/main/default/objects/Contact/fields/Other_Lactation_Certification_Level__c.field-meta.xml
<CustomField>
    <fullName>Other_Lactation_Certification_Level__c</fullName>
    <label>Other Lactation Certification Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>