unpackaged/main/default/objects/Contact/fields/Other_Pronoun_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Pronoun_Description__c</fullName>
    <description>Is used to store patients own desired pronouns.</description>
    <label>Other Pronoun Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>