unpackaged/main/default/objects/Contact/fields/Other_Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Other_Race_Ethnicity__c</fullName>
    <label>Other Race/Ethnicity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>