unpackaged/main/default/objects/Contact/fields/Pause_On__c.field-meta.xml
<CustomField>
    <fullName>Pause_On__c</fullName>
    <label>Pause On</label>
    <type>Date</type>
</CustomField>