unpackaged/main/default/objects/Contact/fields/Paused_Until__c.field-meta.xml
<CustomField>
    <fullName>Paused_Until__c</fullName>
    <label>Paused Until</label>
    <type>Date</type>
</CustomField>