unpackaged/main/default/objects/Contact/fields/Pending_Deactivation_Since__c.field-meta.xml
<CustomField>
    <fullName>Pending_Deactivation_Since__c</fullName>
    <inlineHelpText>To track when status was changed to Pending Deactivation</inlineHelpText>
    <label>Paused Until</label>
    <type>DateTime</type>
</CustomField>