unpackaged/main/default/objects/Contact/fields/Please_list_the_languages_you_speak__c.field-meta.xml
<CustomField>
    <fullName>Please_list_the_languages_you_speak__c</fullName>
    <label>Please list the languages you speak</label>
    <length>255</length>
    <type>Text</type>
</CustomField>