unpackaged/main/default/objects/Contact/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <description>Patient&#39;s preferred name.</description>
    <label>Preferred Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>