unpackaged/main/default/objects/Contact/fields/Preferred_Radius__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Radius__c</fullName>
    <description>18816: Capture preferred travel radius</description>
    <label>Preferred Radius</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>