unpackaged/main/default/objects/Contact/fields/PreferredContactChannel__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactChannel__c</fullName>
    <label>Preferred Contact Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>