unpackaged/main/default/objects/Contact/fields/Privacy_T_C__c.field-meta.xml
<CustomField>
    <fullName>Privacy_T_C__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that tracks patient&#39;s consent to the privacy terms and conditions during the request a consultation form submission.</description>
    <inlineHelpText>Patient has agreed to the privacy terms and conditions during the request a consultation form submission.</inlineHelpText>
    <label>Privacy T&amp;C</label>
    <type>Checkbox</type>
</CustomField>