unpackaged/main/default/objects/Contact/fields/Provider_in_Nextgen__c.field-meta.xml
<CustomField>
    <fullName>Provider_in_Nextgen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider in Nextgen</label>
    <type>Checkbox</type>
</CustomField>