unpackaged/main/default/objects/Contact/fields/Qualtrics_Unique_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Unique_Survey_Link__c</fullName>
    <label>Qualtrics Unique Survey Link</label>
    <type>Url</type>
</CustomField>