unpackaged/main/default/objects/Contact/fields/Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnicity__c</fullName>
    <label>Race/Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Race_Ethnicity</valueSetName>
    </valueSet>
</CustomField>