unpackaged/main/default/objects/Contact/fields/Reason_for_Status__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Status__c</fullName>
    <label>Reason for Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>