unpackaged/main/default/objects/Contact/fields/Reason_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Reason_Terminated__c</fullName>
    <label>Reason Terminated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed BGC</fullName>
            </value>
            <value>
                <fullName>Left for competitor</fullName>
            </value>
            <value>
                <fullName>No reason given</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Incomplete BCG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>