unpackaged/main/default/objects/Contact/fields/Receive_WIC_SNAP__c.field-meta.xml
<CustomField>
    <fullName>Receive_WIC_SNAP__c</fullName>
    <label>Receive WIC/SNAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Receive_WIC_SNAP</valueSetName>
    </valueSet>
</CustomField>